--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
-
+    "egg": "^2.22.2",
+    "egg-scripts": "^2.11.0"
   },
   "devDependencies": {
     "autod": "^3.1.0",
@@ -16,6 +17,7 @@
     "node": ">=10.0.0"
   },
   "scripts": {
+    "dev": "egg-bin dev",
     "autod": "autod",
     "lint": "eslint .",
     "test": "npm run lint -- --fix && egg-bin pkgfiles && npm run test-local",
@@ -27,7 +29,10 @@
   "ci": {
     "version": "10"
   },
-  "eslintIgnore": [ "coverage", "dist" ],
+  "eslintIgnore": [
+    "coverage",
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": ""
