--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "dependencies": {
     "egg": "^2.22.2",
+    "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.11.0"
   },
   "devDependencies": {
