--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "egg": "^2.22.2",
     "egg-mysql": "^3.0.0",
-    "egg-scripts": "^2.11.0"
+    "egg-scripts": "^2.11.0",
+    "glob": "^7.1.4",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "autod": "^3.1.0",
