--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "dependencies": {
     "egg": "^2.22.2",
-    "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.11.0",
+    "egg-sequelize": "^5.2.0",
     "glob": "^7.1.4",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "mysql2": "^1.6.5"
   },
   "devDependencies": {
     "autod": "^3.1.0",
     "egg-bin": "^4.13.0",
     "egg-ci": "^1.12.0",
+    "egg-mock": "^3.23.1",
     "eslint": "^6.0.1",
     "eslint-config-egg": "^7.4.1"
   },
